fixed warnings when compiling against Java 11
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>